--- a/helper/altered/FAQ-Accordion-Card-Frontend-Mentor-main/index1.html
+++ b/helper/altered/FAQ-Accordion-Card-Frontend-Mentor-main/index1.html
@@ -7,7 +7,10 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
   <link rel="stylesheet" href="style1.css">
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+ <!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+
 
   <title>Frontend Mentor | FAQ Accordion Card</title>
 
